tdf#157211: don't limit range to data range when opening DB name dialog

This behavior is not what the user expects and we don't
need to init the mark block mode again. This is already
taken care off by the GetDBData code.

Change-Id: I58556642ae696e32065e76e68b9eaca082863dad
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194182
Tested-by: Jenkins
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>